syntax = "proto3";

package ndc;

service NdcService {
    // Health check
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

    // Task management
    rpc CreateTask(CreateTaskRequest) returns (TaskResponse);
    rpc GetTask(GetTaskRequest) returns (TaskResponse);
    rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
    rpc ExecuteTask(ExecuteTaskRequest) returns (ExecuteTaskResponse);
    rpc RollbackTask(RollbackTaskRequest) returns (RollbackTaskResponse);
    rpc GetSystemStatus(GetSystemStatusRequest) returns (SystemStatusResponse);
}

// Health
message HealthCheckRequest {}
message HealthCheckResponse {
    bool healthy = 1;
    string version = 2;
}

// Task
message CreateTaskRequest {
    string title = 1;
    string description = 2;
    string created_by = 3;
}

message GetTaskRequest {
    string task_id = 1;
}

message ListTasksRequest {
    uint32 limit = 1;
    string state_filter = 2;
}

message TaskResponse {
    Task task = 1;
    string message = 2;
}

message ListTasksResponse {
    repeated Task tasks = 1;
    uint32 total_count = 2;
}

message Task {
    string id = 1;
    string title = 2;
    string description = 3;
    string state = 4;
    string created_at = 5;
    string created_by = 6;
    repeated string tags = 7;
}

// Execution
message ExecuteTaskRequest {
    string task_id = 1;
    bool sync = 2;
}

message ExecuteTaskResponse {
    string execution_id = 1;
    string status = 2;
    string message = 3;
}

message RollbackTaskRequest {
    string task_id = 1;
    string snapshot_id = 2;
}

message RollbackTaskResponse {
    bool success = 1;
    string message = 2;
}

// System
message GetSystemStatusRequest {}

message SystemStatusResponse {
    bool healthy = 1;
    string version = 2;
    uint32 total_tasks = 3;
    uint32 active_tasks = 4;
}
